# big-calculator

./: .README  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/astnodes/: astnodes.hpp  astoper.cpp  astoper.hpp  nodeprints.cpp
src/bigint/: bigint.cpp  bigint.hpp  comparsions.cpp  helpers.cpp
src/bigint/operations/: add.cpp  comparsions.cpp  divide.cpp  exponentiate.cpp  multiply.cpp  subtract.cpp
src/core/: core.cpp  core.hpp
src/eval/: eval.cpp  eval.hpp  evalException.hpp
src/eval/evalctx/: evalctx.cpp  evalctx.hpp
src/eval/stl/: funcinfo.hpp  funcreturn.hpp  stl.cpp  stl.hpp
src/eval/userfunc/: userfunc.hpp
src/helpers/: helpers.cpp  helpers.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/lexer/token/: token.hpp
src/logging/: logging.cpp  logging.hpp
src/parser/: eval.cpp  nodeprints.cpp  parser.cpp  parser.hpp
